--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2155,3 +2155,10 @@ ol.toc {
 .highlight .code .selector-id {
   font-weight: bold;
 }
+
+.archive-article-inner {
+  display:grid;
+  padding:0px;
+  grid-gap: 15px;
+  grid-template-columns: 150px 1fr;
+}
