--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -35,7 +35,9 @@
       <table>
         <tr>
           {{ partial "social" . }}
-          <td><a href="{{ .Site.RSSLink }}" target="_blank" title="RSS"><i class="fa fa-rss"></i></a></td>
+          {{ with .OutputFormats.Get "rss" -}}
+            {{ printf `<td><a href=%q target="_blank" title="RSS"><i class="fa fa-rss"></i></a></td>` .Permalink | safeHTML }}
+          {{ end }}
         </tr>
       </table>
     </div>
